--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
     <version>0.0.1</version>
 
     <packaging>jar</packaging>
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 
     <build>
         <plugins>
