--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,13 @@
         <dependency>
             <groupId>com.berray</groupId>
             <artifactId>berray</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jgoodies</groupId>
+            <artifactId>jgoodies-forms</artifactId>
+            <version>1.9.0</version>
         </dependency>
     </dependencies>
 
